[package]
name = "ruts"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ruts"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
serde = "1.0.147"
serde_derive = "1.0.147"
serde_yaml = "0.9"
tmux_interface = "0.2.1"
toml = "0.5.9"
